--- a/css/styles.css
+++ b/css/styles.css
@@ -24,11 +24,11 @@
 }
 
 .row {
-    filter: saturate(1.5) contrast(1.3);
+    filter: saturate(1.5) contrast(1.2);
     background-image: url(../img/championsbg2.webp);
     height: fit-content;
     background-position: center;
-    background-repeat: repeat-y;
+    background-repeat: no-repeat;
 }
 
 .gridContainer1 {
@@ -40,8 +40,12 @@
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(1, 1fr);
     position: relative;
+    text-decoration: none;
 }
+.worldGrid {
+    padding-bottom: 2%;
 
+}
 
 .gridContainer1 .gridImg3,
 .gridContainer1 .gridImg4 {
@@ -251,7 +255,6 @@ main .world {
 
 .start div div .linkIg .igImg2 {
     height: 1.5rem;
-    width: 3rem;
     display: none;
 }
 
@@ -261,7 +264,8 @@ main .world {
 
 .start div div .linkIg:hover .igImg2 {
     display: block;
-    margin-left: 2%;
+    margin-left: 3%;
+    width: 1.5rem;
 }
 
 
@@ -311,6 +315,24 @@ main .world {
 
 }
 
+/*-------------------------------------------------------------------------------FOOTER----------------------------------------------------------------------------------*/
+
+
+footer div {
+    height: 100%;
+    background-color: rgb(255, 255, 255);
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+footer div img {
+    object-fit: contain;
+}
+
+
+
+/*----------------------------------------------------------------------------MEDIA QUERIES-------------------------------------------------------------------------*/
 @media screen and (min-width:5572px) {
     .gridContainer1 {
         width: 67%;
@@ -519,31 +541,14 @@ main .world {
     }
 }
 
-@media screen and (max-width:1275px) {
-    .linkWsp {
-        font-size: 0.9rem;
-    }
-
-    .linkIg {
-        font-size: 0.9rem;
-    }
-
-    .linkIg:hover {
-        font-size: 0.9rem;
-    }
-
-    .linkWsp:hover {
-        font-size: 0.9rem;
-    }
-}
 
 @media screen and (max-width:1151px) {
-    .linkWsp {
-        font-size: 0.7rem;
+    .start div .wsp .linkWsp {
+        font-size: 0.9rem;
     }
 
-    .linkWsp:hover {
-        font-size: 0.7rem;
+    .start div .wsp .linkWsp:hover {
+        font-size: 0.9rem;
     }
 
     .linkIg {
@@ -555,28 +560,159 @@ main .world {
     }
 }
 
+@media screen and (max-width:1110px){
+
+    .start div .ig .linkIg {
+        font-size: 0.96rem;
+    }
+    .start div .ig .linkIg .igImg {
+        height: 1.40rem;
+        width: 2.8rem;
+        margin-left: 0;
+    }
+    .start div .ig .linkIg .igImg2 {
+        height: 1.4rem;
+        width: 2.8rem;
+        margin-right: 0%;
+    }
+
+}
+
+@media screen and (max-width:1044px){
+.start div .ig .linkIg:hover {
+    font-size: 0.85rem;
+}
+}
+@media screen and (max-width:1055px) {
+    .start div .wsp .linkWsp .wspImgWhite {
+        height: 1.25rem;
+        width: 2.5rem;
+        margin-left: -3%;
+    }
+    .start div .wsp .linkWsp .wspImgGreen {
+        height: 1.25rem;
+        width: 2.5rem;
+        margin-left: -3%;
+    }
+    .start div .ig .linkIg {
+        font-size: 0.89rem;
+    }
+}
+
+@media screen and (max-width:979px) {
+    .start div .ig .linkIg {
+        font-size: 0.8rem;
+    }
+}
+@media screen and (max-width:973px) {
+    .start div .wsp .linkWsp .wspImgWhite {
+        margin-top: 0.5%;
+        margin-left: -6%;
+    }
+    .start div .ig .linkIg:hover {
+        font-size: 0.8rem;
+    }
+    .start div .ig .linkIg:hover .igImg {
+        display: block;
+    }
+    .start div .ig:hover {
+        border-image: linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%) 1;
+    }
+    .start div .ig .linkIg:hover {
+    background: linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
+    }
+    .start div .ig .linkIg:hover .igImg2 {
+        display: none;
+    }
+}
+
+@media screen and (max-width:954px) {
+    .start div .wsp .linkWsp {
+        font-size: 0.8rem;
+    }
+}
+    @media screen and (max-width:899px) {
+        .start div .wsp .linkWsp {
+            font-size: 1rem;
+        }
+        .start div .wsp .linkWsp .wspImgWhite {
+            height: 1.5rem;
+            width: 3rem;
+        }
+        .start div .wsp .linkWsp .wspImgGreen {
+            height: 1.5rem;
+            width: 3rem;
+        }
+
+        .start div .ig .linkIg {
+            font-size: 0.96rem;
+        }
+        .start div .ig .linkIg:hover {
+            font-size: 0.96rem;
+        }
+}
+
+@media screen and (max-width:849px) {
+    .start div .wsp .linkWsp {
+        font-size: 0.95rem;
+    }
+    .start div .wsp .linkWsp .wspImgWhite {
+        height: 1.3rem;
+        width: 2.6rem;
+    }
+}
+@media screen and (max-width:849px) {
+.wsp {
+    grid-column: 14/18;
+    grid-row: 20/22;
+}
+}
 @media screen and (max-width:8500px) {
     footer {
-        margin-top: -15%;
+        margin-top: 0;
         height: 15vh;
     }
+    footer div img {
+        height: 100%;
+        width: 12%;
+    }
 }
-@media screen and (max-width:8500px) {
-    footer{
-        margin-top: 0;
+@media screen and (max-width:1200px) {
+    footer {
+        height: 13vh;
+    }
+}
+@media screen and (max-width:750px) {
+    footer {
+        height: 10vh;
+    }
+    footer div img {
+        width: 11%;
     }
 }
 
-
-/*-------------------------------------------------------------------------------FOOTER----------------------------------------------------------------------------------*/
-
-
-footer div {
-    height: 100%;
-    background-color: rgb(255, 255, 255);
-    width: 100%;
+@media screen and (max-width:600px) {
+    footer {
+        height: 10vh;
+    }
 }
-footer div img {
-    height: 100%;
-    width: 20%;
+@media screen and (max-width:430px) {
+    footer div img {
+        width: 13%;
+    }
 }
+/*-----------------------------------------------------------------MOBILE--------------------------------------------------------------------------*/
+
+
+
+
+
+
+
+
+
+
+
+
+
+
