--- a/css/styles.css
+++ b/css/styles.css
@@ -219,6 +219,38 @@ main .world {
 
 
 
+.start div .wsp:hover {
+    border: white 0.5rem solid;
+    background: white;
+}
+
+.start div .linkWsp:hover {
+    background: white;
+    font-size: 1.1rem;
+    color: #16A400;
+    text-shadow: 0px 2px 4px #ffffff;
+
+}
+
+.start div div .linkWsp .wspImgWhite {
+    height: 1.5rem;
+    width: 3rem;
+}
+
+.start div div .linkWsp .wspImgGreen {
+    height: 1.5rem;
+    width: 3rem;
+    display: none;
+}
+
+.start div div .linkWsp:hover .wspImgWhite {
+    display: none;
+}
+
+.start div div .linkWsp:hover .wspImgGreen {
+    display: block;
+}
+
 
 
 .start div div .linkIg .igImg {
@@ -243,38 +275,6 @@ main .world {
     width: 1.5rem;
 }
 
-
-.start div .wsp:hover {
-    border: white 0.5rem solid;
-    background: white;
-
-}
-
-.start div .linkWsp:hover {
-    background: white;
-    color: #16A400;
-    text-shadow: 0px 2px 4px #ffffff;
-}
-
-.start div div .linkWsp .wspImgWhite {
-    height: 1.5rem;
-    width: 3rem;
-
-}
-
-.start div div .linkWsp .wspImgGreen {
-    height: 1.5rem;
-    width: 3rem;
-    display: none;
-}
-
-.start div div .linkWsp:hover .wspImgWhite {
-    display: none;
-}
-
-.start div div .linkWsp:hover .wspImgGreen {
-    display: block;
-}
 
 
 
@@ -995,33 +995,4 @@ footer div img {
     main section .container1 {
         height: 100vh;
     }
-}
-
-/* Cancelar hover wsp*/
-@media screen and (max-width:1000px) {
-
-    .start div div .linkWsp:hover .wspImgWhite {
-        display: block;
-    }
-    
-    .start div div .linkWsp:hover .wspImgGreen {
-        display: none;
-    }
-    
-    
-.start div .wsp:hover {
-    border: white 0.5rem solid;
-    background: white;
-    display: none;
-
-}
-
-.start div .linkWsp:hover {
-    background: white;
-    color: #16A400;
-    text-shadow: 0px 2px 4px #ffffff;
-    display: none;
-}
-
-    
 }
