--- a/css/styles.css
+++ b/css/styles.css
@@ -1039,3 +1039,53 @@ footer div img {
         grid-row: 10/31;
     }
 }
+
+/*FOOTER*/
+@media screen and (min-width:300px) and (max-width:1000px){
+    footer {height: 20vh;
+        margin-top: -8%;
+    }
+    footer div img {
+        width: 20%;
+    }
+    }
+
+/*grids acomodados*/
+@media screen and (min-width:300px) and (max-width:800px){
+    .gridContainer1 {
+        padding-top: 15%;
+        margin-top: 0; 
+        padding-bottom: 10%;
+        margin-bottom: 5%;
+    }
+    main .gridContainer3 {
+        margin-top: 0%;
+        margin-bottom: -15%;
+    }}
+
+    @media screen and (min-height:650px) and (max-height:800px)  {
+        footer {height: 25vh;
+            margin-top: -8%;
+        }
+        footer div img {
+            width: 21%;
+        }
+    }
+
+    @media screen and (min-height:801px) and (max-height:1000px)  {
+        footer {height: 22.5vh;
+            margin-top: -8%;
+        }
+        footer div img {
+            width: 21%;
+        }
+        .gridContainer1 {
+            padding-top: 20%;
+            margin-top: 0; 
+            padding-bottom: 20%;
+            margin-bottom: 1%;
+        }
+        main .gridContainer3 {
+            margin-top: 0%;
+            margin-bottom: -20%;
+    }}
