--- a/css/styles.css
+++ b/css/styles.css
@@ -12,25 +12,26 @@ body {
     background-image: url(../img/black-bg.jpg);
     width: 100%;
     background-position: center;
-    filter: saturate(1.5) brightness(1.1);
+    filter: saturate(1.2);
 }
 .space {
     height: 2vh;
     background-image: url(../img/championsbg2.jpg);
     background-position: center;
     background-repeat: repeat-y;
-    filter: saturate(1.5);
+    filter: saturate(2.5);
+    margin-bottom: -0.5%;
 }
 
 .start {
     background-image: url(../img/black-bg.jpg);
     width: 100%;
     background-position: center;
-    filter: saturate(1.5) brightness(1.1);
+    filter: saturate(1.3);
 }
 
 .row {
-    filter: saturate(1.5) contrast(1.2);
+    filter: saturate(1.3) contrast(1.1);
     background-image: url(../img/championsbg2.webp);
     height: max-content;
     background-position: center;
