--- a/css/styles.css
+++ b/css/styles.css
@@ -1090,3 +1090,23 @@ footer div img {
             margin-top: 0%;
             margin-bottom: -20%;
     }}
+
+    
+    @media screen and (min-width:1000px) and (max-width:5500px)  {
+        footer {height: 13vh;
+            margin-top: -0%;
+        }
+        footer div img {
+            width: 15%;
+        }
+        .gridContainer1 {
+            padding-top: 0%;
+            margin-top: 0; 
+            padding-bottom: 5%;
+            margin-bottom: 0%;
+        }
+        main .gridContainer3 {
+            margin-top: 0%;
+            margin-bottom: -0%;
+
+    }}
