--- a/css/styles.css
+++ b/css/styles.css
@@ -12,11 +12,11 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 4vh;
     position: absolute;
     top: 0 ;
     background-color: rgb(2, 10, 85);
     z-index: 100000;
+    border: #000000 0.35rem solid;
 }
 header div {
     height: 100%;
@@ -1192,4 +1192,15 @@ footer div img {
     main section .world {
         margin-top: -8%;
     }    
+}
+@media screen and (max-width:5500px){
+    header {
+        height: 4vh;
+    }
+}
+@media screen and (max-height:600px) {
+    header {
+        height: 2.5vh;
+        font-size: 7px;
+    }
 }
