--- a/css/styles.css
+++ b/css/styles.css
@@ -4,8 +4,6 @@
     padding: 0;
     box-sizing: border-box;
 }
-
-
 /*-----------------------------------------------------------------------------HEADER----------------------------------------------------------------------------------------*/
 header {
     width: 100%;
@@ -14,7 +12,7 @@ header {
     align-items: center;
     position: absolute;
     top: 0 ;
-    background-color: rgb(2, 10, 85);
+    background-color: rgba(0, 0, 0, 0.536);
     z-index: 100000;
     border: #000000 0.35rem solid;
 }
@@ -27,7 +25,7 @@ header div {
 }
 header div img {
     height: 100%;
-    width: 10%;
+
 }
 header div h1 {
     font-family: 'roboto';
@@ -1174,6 +1172,10 @@ footer div img {
     }
 /*Arreglanod problema fondo mobile*/
 @media screen and (max-width:1024px) {
+    .start {
+        background-image: none ;
+
+    }
     .row { 
         background-image: url(.././img/championsbg2-mobile-500px.png)
     }
@@ -1190,6 +1192,7 @@ footer div img {
         margin-top: -8%;
     }    
 }
+/*HEADER*/
 @media screen and (max-width:5500px){
     header {
         height: 4vh;
@@ -1198,6 +1201,66 @@ footer div img {
 @media screen and (max-height:600px) {
     header {
         height: 2.5vh;
-        font-size: 7px;
+        font-size: 6px;
+    }
+}
+header {
+    background-image: none;
+    background-color: #000000;
+}
+
+@media screen and (max-width:1024px) {
+    body{
+        background-image: url(../img/blueredstart.jpg);
+        }
+        .start{
+            background-image: url(../img/blueredstart.jpg);
+        }
+}
+
+@media screen and (min-width:1024px) {
+    body{
+        background-image: url(../img/bluered.jpg);
+        }
+        .start{
+            background-image: url(../img/bluered.jpg);
+        }
+}
+
+@media screen and (min-width:1600px) and (max-width:1920px) {
+    body{
+        background-image: url(../img/bluered1920px.jpg);
+        }
+        .start{
+            background-image: url(../img/bluered1920px.jpg);
+        }
+}
+
+@media screen and (min-width:1370px) and (max-width:1600px) {
+    body{
+        background-image: url(../img/bluered1600px.jpg);
+        }
+        .start{
+            background-image: url(../img/bluered1600px.jpg);
+        }
+}
+@media screen and (min-width:1024px) and (max-width:1369px)  {
+    body{
+        background-image: url(../img/bluered1366px.jpg);
+        }
+        .start{
+            background-image: url(../img/bluered1366px.jpg);
+        }
+}
+@media screen and (min-width:370px) and (max-width:1020px){
+    header div img {
+        display: none;
+        width: 10%;
+    }
+}
+@media screen and (max-width:370px) {
+    header div img {
+        display:none;
+        width: 5%;
     }
 }
